--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "tailwindcss": "3.4.1",
+    "tus-js-client": "^4.1.0",
     "typescript": "5.3.3"
   },
   "devDependencies": {
