--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
@@ -22,7 +25,8 @@
     "react-icons": "^5.2.1",
     "tailwindcss": "3.4.1",
     "tus-js-client": "^4.1.0",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.5",
@@ -31,12 +35,15 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "@types/supertest": "^6.0.2",
     "encoding": "^0.1.13",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
+    "supabase": "^1.165.0",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2"
   },
   "husky": {
