--- a/package.json
+++ b/package.json
@@ -16,16 +16,21 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "10.4.17",
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.4.1",
     "tus-js-client": "^4.1.0",
     "typescript": "5.3.3",
+    "uuid": "^9.0.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
