--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
+    "re-resizable": "^6.9.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
+    "resizable": "^1.2.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.4.1",
