--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
@@ -20,6 +24,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
+    "resizable": "^1.2.1",
+    "sonner": "^1.4.41",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.4.1",
     "tus-js-client": "^4.1.0",
     "typescript": "5.3.3"
